<resources>
    <string name="app_name">BA107_G3</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="home">首頁</string>
    <string name="search">交友搜尋</string>
    <string name="talk">聊天室</string>
    <string name="gift">禮物商城</string>
    <string name="event">活動特輯</string>
    <string name="giftbox">禮物盒</string>
    <string name="discount">錢包餘額 : </string>
    <string name="bonus">紅利積點 : </string>
    <string name="account">請輸入帳號</string>
    <string name="password">請輸入密碼</string>
    <string name="loginerror1">請輸入帳密</string>
    <string name="loginerror2">帳密有誤，請重新輸入</string>
    <string name="loginfailed">登入失敗</string>
    <string name="welcome">哈囉你好，</string>
    <string name="memheight">身高 :\t</string>
    <string name="memWeight">體重 :\t</string>
    <string name="memBloodType">血型 :\t</string>
    <string name="memInterest">興趣 :\t</string>
    <string name="memContact">交往關係 :\t</string>
    <string name="memEmotion">感情狀態 :\t</string>
    <string name="dollar">元</string>
    <string name="point">點</string>
    <string name="advanced">篩選條件</string>
    <string name="nochoose">不拘</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="down20">20歲以下</string>
    <string name="from20to30">20至30歲</string>
    <string name="from30to40">30至40歲</string>
    <string name="up40">40歲以上</string>
    <string name="Keelung">基隆市</string>
    <string name="Taipei">台北市</string>
    <string name="NewTaipei">新北市</string>
    <string name="Taoyuan">桃園市</string>
    <string name="Hsinchu">新竹市</string>
    <string name="Hsinchu2">新竹縣</string>
    <string name="Miaoli">苗栗縣</string>
    <string name="Changhua">彰化縣</string>
    <string name="Taichung">台中市</string>
    <string name="Nantou">南投縣</string>
    <string name="Yunlin">雲林縣</string>
    <string name="Chiayi">嘉義市</string>
    <string name="Chiayi2">嘉義縣</string>
    <string name="Tainan">台南市</string>
    <string name="Kaohsiung">高雄市</string>
    <string name="Pingtung">屏東縣</string>
    <string name="Taitung">台東縣</string>
    <string name="Hualien">花蓮市</string>
    <string name="Yilan">宜蘭市</string>
    <string name="single">單身</string>
    <string name="love">穩定交往中</string>
    <string name="couple">已婚</string>
    <string name="breakup">離婚</string>
    <string name="dontnohowtosay">一言難盡</string>
    <string name="secret">保密</string>
    <string name="noMatch">無符合此搜尋條件的人</string>
    <string name="alreadyadd">已發出過請求，對方尚未回應</string>
    <string name="sendadd">送出好友申請</string>
    <string name="searchfriend">搜尋好友</string>
    <string name="keyword">熱門關鍵字:蛋糕、聖誕</string>
    <string name="addcart">加入購物車</string>
    <string name="textprice">價格:</string>
    <string name="amount">數量:</string>
    <string name="keyinkeyword">請輸入關鍵字</string>
    <string name="over_amount">已超過商品數量限制\n，無法再加入購物車</string>
    <string name="current_buy">目前已選購的商品:</string>
    <string name="confirm">確認</string>

</resources>
