<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_giftdiscount"
    android:layout_width="180dp"
    android:layout_height="300dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="6dp">
    <!--card_view:cardCornerRadius="4dp"-->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#FFF"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/giftd_pic"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/friend2" />


        <TextView
            android:id="@+id/giftd_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="104dp"
            android:layout_marginEnd="56dp"

            android:layout_marginStart="56dp"
            android:text="大吳神"
            android:textColor="@color/textcolor"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/photo"
            card_view:layout_constraintVertical_bias="0.222" />

        <TextView
            android:id="@+id/textprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textprice"
            android:textColor="@color/textcolor"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.057"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/giftd_oldprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="200"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.461"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/giftd_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="78dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="$200"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.4"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:text="@string/amount"
            android:textColor="@color/textcolor"
            android:textSize="14sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.764"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/giftd_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:layout_marginStart="4dp"
            android:text="5"
            android:textColor="@color/textcolor"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.894"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/giftd_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="剩餘1天5小時8分40秒"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.512"
            card_view:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btncart"
            android:text="@string/addcart"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="24dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:srcCompat="@drawable/heart"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/cancellike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:srcCompat="@drawable/emptyheart" />

        <Button
            android:id="@+id/giftd_percent"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:text="8.7折"
            android:background="@color/yellow"
            android:textColor="@color/red"
            android:textSize="15sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>